[tool.poetry]
name = "crunchdao"
version = "v0.1.4"
description = "Python API for the Crunchdao machine learning tournament"
authors = ["uuazed <uuazed@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
pandas = "^1.3.5"
requests = "^2.27.0"
tqdm = "^4.62.3"
inflection = "^0.5.1"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
